jupyterhub/overlays/prod/jupyterhub-route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    annotations:
        kubernetes.io/tls-acme: "true"
    name: jupyterhub
spec:
    host: jupyterhub.datahub.redhat.com
    port:
        targetPort: 8080-tcp
    tls:
        certificate: ENC[AES256_GCM,data:mGmkLWN2K2Y+RlvgnEWwXQZTxE2pJ4cUqw42MOEADVGnAnS741KUK9vZm+gvTyOOcE4B9XjZi1NjlVbV9Q4sAphVPvsCVOR2dH208JkuC4oX8RMoBFe67pCs7vhv8SFi8PubRkpQiS4+Sb/m8fUidUV2MHW4gLNF53aukppF7X4EM26aW44d3Zu1L14fihCy9stPlRBDgO07qZO75SpuEHFG3NU7pItMs59FBIvetIMdkpSqIw2SbiJ88wfdr/4jrDJSNR9lcCF8Va+dpDjZzpsdnMAyQqkHX7/4nr+oiPBZVsQ5P5dJoatduK2xXdZwSU95AdsO/T0ThsBzesjDA4PqHkoOtFBAGONzCa5dbTA+ELeUaUVx3PkkfQElxFWGsww5AAg7blEIlhA6tJApj0Ro7Ce6Mtg0H30ti+NJufg/JeT7OFk3IQbscvmjUNbO6tViSffke1C [...]
        insecureEdgeTerminationPolicy: ENC[AES256_GCM,data:QgKisUOY5XE=,iv:RRfCACMxCBYzSd/+yBnrtmZgOJsld2R3IIA4vh8bORs=,tag:d+Nj6sjMUzCqtg+/8t9dzg==,type:str]
        key: ENC[AES256_GCM,data:40UCwAPdwVcYHJetOrZV38ZE4TVEg1izOhjP8BvSGKvhJ5QBJqH14C7AxmQQ0STZqGvd2e7e3/9QcKFpjh2ihcekWXgx5KkhNfASaKdIpIPwAnTf2lv/mQ3g2yrzbqQK8qVkuvJXE2Ctgr3biRjk9VXOJDa3Lhyh4/3fRheEV12GGxglQAZBoU0ntn6n/rouwB+lGMNsqKF5ggoB2yOJ3TQyNYnboZgx4DnxbTaBAAao+tvd9q2YdYgQAHLobm1MRpB1fgvud+QZaM5Zo4Qj0jv5hrOb27wMec+deKv97DfDa4vLkDNfcIaWEhIAVWv9Plfj2yJ66028t0xRqec+QvGqizfhk2m5Ij8duwj+TKRp6gEAjKdSonMgV7J9qLyywCsfcBF65C7ljfgnx1PS8wEpIrJpNxrNB43CXQ5URcvXI8kqDMwzlGyNBDP43ncg7oDqlzXZ5b9aPRNMKLB [...]
        termination: ENC[AES256_GCM,data:Xs3BTg==,iv:+G3DeNztmPstaY/vtbCk3XgnkYicx36NvSZlLDZ6fL0=,tag:egXVz0u9D3jOhySP/4ArVw==,type:str]
    to:
        kind: Service
        name: jupyterhub
        weight: 100
    wildcardPolicy: None
status:
    ingress: null
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2020-09-21T21:12:45Z'
    mac: ENC[AES256_GCM,data:/DDdftpB1nIbcEO9Wxf743wO+6RQ2nkncQoC88OFmoV1f4EibhhgjI8vAsrbTcQb3Au/ecMvKn4To1NLnyve61kFmQhpIXZQ4rBB3ncY8IDpQ0cRi5FPxfHHDmspAsda9OV6WuuOtD6T1r+s3pAq4ZHtSfMx8itKy5devkLyW8Y=,iv:SrS021UyFnXyw2wZgSmxrykjFXZooihBOcknBvOUHUI=,tag:lDsYA78iq5DXb5VR/HdlKw==,type:str]
    pgp:
    -   created_at: '2020-09-21T21:12:44Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf9FDFfhkG6Ct+aaVwzdG44I9Bo6BosypooXWUieMYrtwuc
[...]
            FynqwxWDJzNdT8Y2W5kvhxZ8X4WfZtjXHmtLebqxqg==
            =rICC
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.6.1
